[package]
name = "fastq_merge"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~3.0", features = ["cargo"]}
log = "~0.4"
stderrlog = "~0.5"
chrono = "~0.4"
compress_io = { git = "https://github.com/heathsc/compress_io.git" }
